# leci

./: .gitignore  README.md
1o1s/FP/: ATP2023.txt
1o1s/ISD/: ComoFazerISDPratico-1
1o2s/POO/: TestePOOT1_2023.txt  TestePOOT2_2023.txt  poo teorico1.txt  poo teorico2.txt
2o1s/AED/: 2017_t1(1).docx  exameAED.txt
2o1s/Economia/: Exame Ep Normal IE 2018 vA Res.docx
2o2s/AS/: ExameAS_22_23.txt
3o1s/SO/somm24nm-so-g16/src/: CMakeLists.txt  main.cpp
3o1s/SO/somm24nm-so-g16/src/core/: CMakeLists.txt  binselection.cpp  exception.cpp  probing.cpp
3o1s/SO/somm24nm-so-g16/src/frontend/: CMakeLists.txt  jdt.cpp  mem.cpp  pct.cpp  rdy.cpp  sim.cpp  swp.cpp
3o1s/SO/somm24nm-so-g16/src/group/: CMakeLists.txt  TEST_SO
3o1s/SO/somm24nm-so-g16/src/group/jdt/: CMakeLists.txt  jdt_init.cpp  jdt_load.cpp  jdt_next.cpp  jdt_print.cpp  jdt_random_fill.cpp  jdt_term.cpp
3o1s/SO/somm24nm-so-g16/src/group/mem/: CMakeLists.txt  mem_add.cpp  mem_alloc.cpp  mem_free.cpp  mem_init.cpp  mem_print.cpp  mem_retrieve.cpp  mem_term.cpp
3o1s/SO/somm24nm-so-g16/src/group/pct/: CMakeLists.txt  pct_getters.cpp  pct_init.cpp  pct_new_process.cpp  pct_print.cpp  pct_term.cpp  pct_update_state.cpp
3o1s/SO/somm24nm-so-g16/src/group/rdy/: CMakeLists.txt  rdy_fetch.cpp  rdy_init.cpp  rdy_insert.cpp  rdy_print.cpp  rdy_term.cpp
3o1s/SO/somm24nm-so-g16/src/group/sim/: CMakeLists.txt  sim_config.cpp  sim_init.cpp  sim_print.cpp  sim_run.cpp  sim_step.cpp  sim_term.cpp
3o1s/SO/somm24nm-so-g16/src/group/swp/: CMakeLists.txt  swp_fetch.cpp  swp_init.cpp  swp_insert.cpp  swp_print.cpp  swp_term.cpp
3o2s/BD/Guiao7_108583_109211/contacts-app-python-v1/: README.md  app.py  conf.ini  pyproject.toml
3o2s/BD/Guiao7_108583_109211/contacts-app-python-v1/persistence/: customers.py  session.py
3o2s/BD/Guiao7_108583_109211/contacts-app-python-v1/templates/: contact_list.html  customer_details_form.html  customer_details_view.html  index.html
(+1516 files in other folders)
